fixing decimal overflow with a check and limitation upto 5 places

--- a/style.css
+++ b/style.css
@@ -59,3 +59,7 @@ main {
     background-color: rgb(255, 255, 255);
 
 }
+
+.ops {
+    background-color: rgb(245, 251, 245);
+}
